<resources>
    <string name="app_name">INSTRAGRAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="acc_name">Max Sommer</string>
    <string name="follower_follows">10000000 Follower  1 Follows</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">INSTRAGRAM</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="benutzername">Benutzername:</string>
    <string name="I_like">Gefällt mir</string>


    <!-- Strings related to Nutzerprofil -->
    <string name="button_folgen">Folgen</string>
    <string name="anzahl_following">Following</string>
    <string name="anzahl_follower">Follower</string>
    <string name="benutzerName"></string>

    <!-- Strings related to Bearbeitung des Profils -->
    <string name="Profilbild"></string>
    <string name="OpenPicture">Foto aus Galerie</string>
    <string name="editName">Benutzername</string>
    <string name="editBiografie">Biografie</string>
    <string name="speichern">Änderungen speichern</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Menu Leiste   -->
    <string name="settings_name">Profil bearbeiten</string>
</resources>
