<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <Button
        android:id="@+id/folgen"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:text="@string/button_folgen"
        app:layout_constraintStart_toEndOf="@+id/profilbild"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/follower"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/anzahl_follower"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/profilbild"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/following"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/anzahl_following"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/follower"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/biografie"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/biografie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folgen" />

    <ImageView
        android:id="@+id/profilbild"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="profilbild"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/futurecity" />

</android.support.constraint.ConstraintLayout>